Get admin ui listing working
